# fireball_enterprise_shopify

./: .editorconfig  .gitignore  .theme-check.yml  CLAUDE.md  README.md  VERSION  cspell.config.yaml  invoke.yml  properties.yml  properties.yml.example  pyproject.toml  setup.sh
.claude/: settings.json
.claude/commands/: dawn.md  docs.md  fix.md  pr-notes.md  pr.md  pull.md  punch-it-chewy.md  push.md  rebase.md  setup.md  shopify.md  squash.md  sync-setup.md  template.md  test.md  update.md  upgrade.md  versioning.md
.github/instructions/: ai_prompts.instructions.md  dawn.instructions.md  docs.instructions.md  fireball.instructions.md  index.instructions.md  modules.instructions.md  project.instructions.md  prompts.instructions.md  python.instructions.md  shopify.instructions.md  style.instructions.md  tasks.instructions.md  tests.instructions.md  version.instructions.md  versioning.instructions.md
.github/prompts/: dawn.prompt.md  docs.prompt.md  fix.prompt.md  pr-notes.prompt.md  pr.prompt.md  pull.prompt.md  punch-it-chewy.prompt.md  push.prompt.md  rebase.prompt.md  setup.prompt.md  shopify.prompt.md  squash.prompt.md  sync-setup.prompt.md  template.prompt.md  test.prompt.md  update.prompt.md  upgrade.prompt.md  versioning.prompt.md
.github/workflows/: dawn_sync.yml  deploy.yml  release.yml  tests.yml
assets/: base.css  fireball-dark-mode.css
docs/addons/: essential-loyalty.md  flow.md  forms.md  judge-me-reviews.md  kin-custom.md  messaging.md  printful.md  printify.md  rt-size-chart-size-guide.md  shippo.md  store-migration.md  theme-access.md  translate-and-adapt.md  vo-product-options.md  zendrop.md
docs/howtos/: create_actions_bot.md  local_setup.md  theme_access_setup_guide.md  usage.md
docs/sales_channels/: agentic.md  facebook-instagram.md  inbox.md  online-store.md  point-of-sale.md  shop.md  tiktok.md
layout/: theme.liquid
locales/: de.json  en.default.json  en.default.schema.json  es.json
modules/: README.md  __init__.py
modules/claude/: README.md  __init__.py  sync.py
modules/common/: README.md  cli.py  properties.py  route_utils.py  utils.py
modules/dawn/: README.md  __init__.py  list.py  upgrade.py  (+1 more)
sections/: featured-product.liquid  header.liquid  main-cart-items.liquid
snippets/: card-product.liquid  cart-drawer.liquid  fireball-version.liquid
tasks/: __init__.py  claude.py  combos.py  dawn.py  debug.py  repo.py  ruff.py  shopify.py  skeleton.py  template.py  tests.py  upgrade.py  uv.py  version.py  versioning.py
templates/: index.json
(+32 files in other folders)
