[project]
name = "template-shopify-theme"
version = "1.0.0"
description = "Fireball Enterprise Shopify theme template — vendored Dawn, thin caller workflows, Python invoke tasks, reusable modules, and AI Copilot prompts."
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.14"
dependencies = [
    "actionlint-py~=1.7.12.24",
    "invoke~=3.0.3",
    "pylint~=4.0.6",
    "pyyaml~=6.0.3",
    "ruff~=0.15.20",
    "tomlkit~=0.15.0",
    "yamllint~=1.38.0",
]

[tool.setuptools]
packages = []

[project.urls]
homepage = "https://github.com/fireballenterprise/template_shopify_theme"
repository = "https://github.com/fireballenterprise/template_shopify_theme"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["PL", "E", "W", "F", "I", "B", "A", "C4", "N", "UP", "T10", "EXE", "COM819", "C", "Q"]

ignore = ["E501", "PLR2004"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 20 # 5 = default, 12 = previous

[tool.ruff.lint.pylint]
max-branches = 20 # default = 12, previous = 15
max-args = 15 # default = 5
max-statements = 75 # default = 50
max-returns = 10 # default = 6
max-nested-blocks = 10 # default = 5

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pylint.main]
py-version = "3.14"
fail-under = 10
ignore = ["CVS"]
ignore-paths = [
  "^env/.*$",
  "^.venv/.*$",
  "^venv/.*$",
  "^.ruff_cache/.*$",
  "^tmp/.*$",
  ".*__pycache__.*$",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "use-implicit-booleaness-not-comparison-to-string",
  "use-implicit-booleaness-not-comparison-to-zero",
  "missing-module-docstring",
  "missing-function-docstring",
  "fixme",
  "line-too-long",
  "duplicate-code",
  "relative-beyond-top-level",
  "invalid-name",
  "logging-fstring-interpolation",
  "import-error",
]

[tool.pylint.design]
max-args = 15
max-branches = 20
max-locals = 20
max-positional-arguments = 15
max-public-methods = 20
max-returns = 10
max-statements = 75

[tool.pylint.refactoring]
max-nested-blocks = 10
